--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -28,7 +28,9 @@
         </div>
     </form>
 
-    <a th:href="@{/list/add}" th:text="#{등록}"></a>
+    <div class="submitBtn">
+        <button type="submit" class="btn">등록</button>
+    </div>
     <div class="divTable minimalistBlack">
         <div class="divTableHeading">
             <div class="divTableRow">
