--- a/src/main/webapp/WEB-INF/templates/front/list/update.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/update.html
@@ -4,8 +4,9 @@
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content" >
     <h1>관측소 정보 수정</h1>
-    <a th:href="@{/list}" th:text="#{목록으로}"></a>
-
+    <div class="submitBtn">
+        <a th:href="@{/list}"  class="btn" >목록</a>
+    </div>
     <hr>
     <div class="flex align-center">
         <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off" th:object="${requestObservatory}">
@@ -16,11 +17,10 @@
 
             <th:block th:replace="~{front/list/_form::form}"></th:block>
 
-            <div class="submit_btns">
+            <div class="submitBtn">
                 <button type="submit" th:text="#{수정}"></button>
             </div>
         </form>
-
-
+    </div>
 </main>
 </html>
