feat: 마커 추가작업 : 좌표값 json 데이터로 가져오기

--- a/src/main/webapp/WEB-INF/templates/front/map/aside.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/aside.html
@@ -45,5 +45,16 @@
         </div>
     </div>
     <th:block th:replace="~{common/_pagination::pagination}"></th:block>
+    <textarea th:text="${json}" class="dn" id="jsonData"></textarea>
+
+    <script>
+        const el = document.getElementById("jsonData");
+        if (el && el.value.trim()) {
+            const items = JSON.parse(el.value.trim());
+
+            parent.postMessage({map: items}, "*");
+        }
+    </script>
+
 </main>
 </html>
