--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -29,7 +29,7 @@
     </form>
 
     <div class="submitBtn">
-        <button type="submit" class="btn">등록</button>
+        <a th:href="@{/list/add}"  class="btn" >등록</a>
     </div>
     <div class="divTable minimalistBlack">
         <div class="divTableHeading">
