--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -6,7 +6,10 @@
     <h1>대시보드</h1>
     차트 테스트
     <div>
-        <canvas id="myChart"></canvas>
+        <canvas id="myChartOne"></canvas>
+    </div>
+    <div>
+        <canvas id="myChartTwo"></canvas>
     </div>
 
 
