--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -19,7 +19,7 @@
     </div>
 
     <div>
-        <canvas id="myChart1_1"></canvas>
+        <canvas id="myChart4"></canvas>
     </div>
 
 </main>
