--- a/src/main/webapp/WEB-INF/templates/front/list/setting.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/setting.html
@@ -31,7 +31,7 @@
             <form th:action="@{/list/setting/save}" method="post" th:object="${requestObservatory}" target="ifrmProcess" autocomplete="off" id="editForm">
                 <div class="observatoryForm mgn-bottom-10px">
                     <input type="hidden" name="obscd" th:value="*{obscd}">
-                    <input type="hidden" name="type" th:value="*{type}">
+                    <input type="hidden" id="type" name="type" th:value="*{type}">
                     <div>
                         <span th:text="#{사용여부}"></span>
                         <input type="checkbox" name="useOutlier" id="useOutlier" th:field="*{useOutlier}">
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <form id="editFrm">
+        <form id="submitFrm">
             <input type="hidden" name="type" th:value="${requestObservatory.type}">
         </form>
         <th:block th:replace="~{common/_pagination::pagination}"></th:block>
