--- a/src/main/webapp/WEB-INF/templates/front/layouts/main.html
+++ b/src/main/webapp/WEB-INF/templates/front/layouts/main.html
@@ -56,6 +56,9 @@
     <link rel="stylesheet" type="text/css" th:href="@{/front/css/map/ol.css}" />
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/build/ol.js"></script>
 
+    <!-- Proj4 라이브러리 로드 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.7.2/proj4-src.js"></script>
+
     <!-- chart.js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
