design: 저장 버튼수정/ 마커 좌표계 주석처리

--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -61,8 +61,7 @@
 						<span th:text="#{면적}"></span>
 					</button>
 				</div>
-
-                <button type="button" id="save_map">
+                <button type="button" id="save_map" class="align-right mgn-bottom-10px wd-50px ht-50px">
                     <i class="xi-save"></i>
                     <span th:text="#{저장}"></span>
 				</button>
