--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -139,6 +139,13 @@ h2{
     width: 50px;
 }
 
+.wd-110px {
+    width: 110px;
+}
+
+.ht-35px {
+    height: 35px;
+}
 .ht-50px{
     height: 50px;
 }
