--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -66,6 +66,14 @@
                     <i class="xi-save"></i>
                     <span th:text="#{저장}"></span>
 				</button>
+				<div class="dn flex-column mgn-bottom-10px">
+					<button type="button" id="save_map_png" class="wd-110px ht-35px align-right">
+						<span th:text="#{이미지 저장}"></span>
+					</button>
+					<button type="button" id="save_map_pdf" class="wd-110px ht-35px align-right">
+						<span th:text="#{PDF 저장}"></span>
+					</button>
+				</div>
 
 			</div>
 			<div id="map" class="map"></div>
