--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -65,7 +65,7 @@
                     <i class="xi-save"></i>
                     <span th:text="#{저장}"></span>
 				</button>
-				<div class="dn flex-column mgn-bottom-10px">
+				<div id="save_map_box" class="flex-column mgn-bottom-10px" style="display: none !important;">
 					<button type="button" id="save_map_png" class="wd-110px ht-35px align-right">
 						<span th:text="#{이미지 저장}"></span>
 					</button>
