--- a/src/main/webapp/WEB-INF/templates/front/map/aside.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/aside.html
@@ -3,17 +3,20 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{front/layouts/popup}">
 <main layout:fragment="content">
-    <form class="searchFrm flex align-center mgn-bottom-10px" th:object="${observatorySearch}">
-        <input type="text" class="searchInp" th:placeholder="#{관측소명_입력}" name="obsnm">
-        <button type="submit" class="searchBtn">
-            <i class="xi-search"></i>
-        </button>
+    <form class="searchFrm mgn-bottom-10px" th:object="${observatorySearch}">
+        <div class="flex align-center mgn-bottom-10px">
+            <input type="text" class="searchInp" th:placeholder="#{관측소명_입력}" name="obsnm">
+            <button type="submit" class="searchBtn">
+                <i class="xi-search"></i>
+            </button>
+        </div>
         <div class="just-btw flex mgn-bottom-10px align-center">
             <div class="targetNm">
                 <span th:if="${observatorySearch.type == 'rf'}" th:text="#{강수량}"></span>
                 <span th:if="${observatorySearch.type == 'wl'}" th:text="#{수위}"></span>
                 <span th:if="${observatorySearch.type == 'flw'}" th:text="#{유량}"></span>
                 <span th:if="${observatorySearch.type == 'cctv'}" th:text="#{CCTV}"></span>
+                <span th:unless="${observatorySearch.type == 'cctv'}" th:text="#{관측소}"></span>
                 <span th:unless="${observatorySearch.type == 'cctv'}" th:text="#{관측소}"></span>
             </div>
             <select class="order" name="order" th:field="*{order}">
