--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -32,21 +32,21 @@
         </div>
     </div>
 
-    <div>
+    <div class=" flex">
         <div class="chart">
-            <div>
+            <div class="myChart">
                 <!--차트를 그릴 영역으로 canvas태그를 사용한다.-->
                 <canvas id="myChart1"></canvas>
             </div>
 
-            <div>
+            <div class="myChart">
                 <canvas id="myChart2"></canvas>
             </div>
-            <div>
+            <div class="myChart">
                 <canvas id="myChart3"></canvas>
             </div>
 
-            <div>
+            <div class="myChart">
                 <canvas id="myChart4"></canvas>
             </div>
         </div>
