--- a/src/main/resources/static/front/css/map/map.css
+++ b/src/main/resources/static/front/css/map/map.css
@@ -27,6 +27,10 @@
     cursor: pointer;
 }
 
+.asideBtns button.on, .asideBtns button:hover{
+    background: #293051;
+}
+
 .asideBtns button>i{
     font-size: 50px;
     padding: 10px;
