feat: 대시보드 기본 틀 작업

--- a/src/main/webapp/WEB-INF/templates/front/outlines/header.html
+++ b/src/main/webapp/WEB-INF/templates/front/outlines/header.html
@@ -15,6 +15,11 @@
                 <button type="button" data-url="/list" th:text="#{목록}"></button>
                 <button type="button" data-url="/dashboard" th:text="#{대시보드}"></button>
             </div>
+            <div class="dashboardBtns dn">
+                <button type="button" th:text="#{강수량}" data-type="rf"></button>
+                <button type="button" th:text="#{수위}" data-type="wl"></button>
+                <button type="button" th:text="#{유량}" data-type="flw"></button>
+            </div>
             <!-- 시간남으면 로그인 추가 -->
         </div>
     </header>
