feat: 헤더 버튼 표시

--- a/src/main/resources/static/front/css/dashboard/style.css
+++ b/src/main/resources/static/front/css/dashboard/style.css
@@ -2,3 +2,18 @@
     width: 40vw;
     height: 40vh;
 }
+
+.dashboardBtns{
+    margin-left: 10px;
+}
+
+.dashboardBtns button {
+    color: #fff;
+    font-weight: 700;
+    height: 30px;
+    width: 80px;
+}
+
+.dashboardBtns button.on, .dashboardBtns button:hover{
+    border-bottom: 2px solid #fff;
+}
