--- a/src/main/webapp/WEB-INF/templates/front/outlines/header.html
+++ b/src/main/webapp/WEB-INF/templates/front/outlines/header.html
@@ -10,12 +10,12 @@
                 </a>
             </div>
             <!-- 버튼 클릭 영역 -->
-            <div class="page-link">
+            <div class="page-link flex align-center">
                 <button type="button" data-url="/map" th:text="#{지도}"></button>
                 <button type="button" data-url="/list" th:text="#{목록}"></button>
-                <button type="button" data-url="/dashboard" th:text="#{대시보드}"></button>
+                <button type="button" data-url="/dashboard/rf" th:text="#{대시보드}"></button>
             </div>
-            <div class="dashboardBtns dn">
+            <div class="dashboardBtns dn flex align-center">
                 <button type="button" th:text="#{강수량}" data-type="rf"></button>
                 <button type="button" th:text="#{수위}" data-type="wl"></button>
                 <button type="button" th:text="#{유량}" data-type="flw"></button>
