--- a/src/main/webapp/WEB-INF/templates/front/list/write.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/write.html
@@ -16,7 +16,7 @@
             <th:block th:replace="~{front/list/_form::form}"></th:block>
 
             <div class="submitBtn">
-                <button type="submit" class="btn">등록</button>
+                <button type="submit" th:text="#{등록}"></button>
             </div>
         </form>
     </div>
