feat: 관측 정보 10M - 10M 현재 시간 기준으로 출력하도록 수정 예정

--- a/src/main/webapp/WEB-INF/templates/front/list/info.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/info.html
@@ -57,12 +57,11 @@
         </div>
 
         <div class="divTable minimalistBlack">
-            <table id="statDataTable">
-                <thead>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+            <div class="divTableHeading">
+            </div>
+            <div class="divTableBody">
+
+            </div>
         </div>
 
         <th:block th:replace="~{common/_pagination::pagination}"></th:block>
