--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -34,20 +34,26 @@
 
     <div class=" flex">
         <div class="chart">
-            <div class="myChart">
-                <!--차트를 그릴 영역으로 canvas태그를 사용한다.-->
-                <canvas id="myChart1"></canvas>
-            </div>
+            <div class=" flex">
 
-            <div class="myChart">
-                <canvas id="myChart2"></canvas>
+                <div class="myChart">
+                    <!--차트를 그릴 영역으로 canvas태그를 사용한다.-->
+                    <canvas id="myChart1"></canvas>
+                </div>
+
+                <div class="myChart">
+                    <canvas id="myChart2"></canvas>
+                </div>
             </div>
+            <div class=" flex">
+
             <div class="myChart">
                 <canvas id="myChart3"></canvas>
             </div>
 
             <div class="myChart">
                 <canvas id="myChart4"></canvas>
+            </div>
             </div>
         </div>
 
@@ -88,9 +94,6 @@
             </div>
             <th:block th:replace="~{common/_pagination::pagination}"></th:block>
         </div>
-    </div>
-    <div>
-        <canvas id="myChart"></canvas>
     </div>
 </main>
 </html>
