--- a/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
@@ -4,7 +4,6 @@
       layout:decorate="~{front/layouts/popup}">
 <main layout:fragment="content">
     <section th:object="${observatory}">
-        111
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
         <div class="divTable">
@@ -18,11 +17,11 @@
             </div>
             <div class="divTableRow">
                 <div class="divTableCell" th:text="#{누적강수량}"></div>
-                <div class="divTableCell" th:text="*{reqOb}"></div>
+                <div class="divTableCell" th:text="*{rf}"></div>
             </div>
             <div class="divTableRow">
                 <div class="divTableCell" th:text="#{위치}"></div>
-                <div class="divTableCell" th:text="*{loc}"></div>
+                <div class="divTableCell" th:text="*{addr + ' ' + etcaddr}"></div>
             </div>
         </div>
     </section>
