--- a/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
@@ -4,7 +4,6 @@
       layout:decorate="~{front/layouts/popup}">
 <main layout:fragment="content">
     <section th:object="${observatory}">
-        222
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
         <div class="divTable">
@@ -14,7 +13,7 @@
             </div>
             <div class="divTableRow">
                 <div class="divTableCell" th:text="#{현재수위}"></div>
-                <div class="divTableCell"th:text="*{currentOb}"></div>
+                <div class="divTableCell" th:text="*{wl}"></div>
             </div>
             <div class="divTableRow">
                 <div class="divTableCell" th:text="#{수위변화}"></div>
@@ -22,7 +21,7 @@
             </div>
             <div class="divTableRow">
                 <div class="divTableCell" th:text="#{위치}"></div>
-                <div class="divTableCell" th:text="*{loc}"></div>
+                <div class="divTableCell" th:text="*{addr + ' ' + etcaddr}"></div>
             </div>
         </div>
     </section>
