design: 관측소 팝업 css수정중

--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -153,6 +153,10 @@ h2{
     margin-bottom: 10px;
 }
 
+.mgn-10px {
+    margin: 10px;
+}
+
 /* 테이블 S */
 .minimalistBlack {
   border: 3px solid #000000;
