--- a/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
@@ -6,7 +6,7 @@
     <section th:object="${observatory}">
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
-        <div class="divTable">
+        <div class="divTable minimalistBlack mgn-10px">
             <div class="divTableRow">
                 <div class="divTableCell" th:text="#{코드}"></div>
                 <div class="divTableCell" th:text="*{obscd}"></div>
