--- a/src/main/webapp/WEB-INF/templates/front/dashboard/wl.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/wl.html
@@ -58,7 +58,7 @@
                         <div th:text="#{연번}" class="divTableHead">head1</div>
                         <div th:text="#{관측소 명}" class="divTableHead">head2</div>
                         <div th:text="#{관측소 코드}" class="divTableHead">head4</div>
-                        <div th:text="#{강수량}" class="divTableHead">head4</div>
+                        <div th:text="#{수위}" class="divTableHead">head4</div>
                     </div>
                 </div>
                 <div class="divTableBody"  th:if="${items != null && !items.isEmpty()}" th:each="item, status : ${items}">
