feat: 목록 클릭 설정

--- a/src/main/resources/static/front/css/dashboard/style.css
+++ b/src/main/resources/static/front/css/dashboard/style.css
@@ -17,3 +17,7 @@
 .dashboardBtns button.on, .dashboardBtns button:hover{
     border-bottom: 2px solid #fff;
 }
+
+.observatory{
+    cursor: pointer;
+}
