--- a/src/main/resources/static/front/css/list/style.css
+++ b/src/main/resources/static/front/css/list/style.css
@@ -34,7 +34,7 @@
 .observatory_box{
     border: 1px solid #222;
     border-radius: 5px;
-    height: 300px;
+    height: flex;
     padding: 10px 20px;
     margin: 20px 30px;
 }
