--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -118,8 +118,8 @@ h2{
 
 /* 가로선 */
 .h-line{
-    width: 100%;
-    margin: 15px;
+    width: 90%;
+    margin: 10px auto;
     border-bottom: 2px solid #222;
 }
 
@@ -127,6 +127,7 @@ h2{
 .text-center{
     width: 100%;
     text-align: center;
+    padding-top: 0;
 }
 
 .pst-abs{
@@ -184,6 +185,8 @@ h2{
   color: #000000;
   text-align: left;
 }
+
+.divTable .minimalistBlack .divTableRow
 .minimalistBlack .tableFootStyle {
   font-size: 14px;
   font-weight: bold;
@@ -193,11 +196,33 @@ h2{
 .minimalistBlack .tableFootStyle {
   font-size: 14px;
 }
+
+/* map popup 관측소 s */
+.minimalistBlackPopup {
+    border: 3px solid #000000;
+    text-align: left;
+    width: 90%;
+    margin: auto;
+    border-collapse: collapse;
+}
+.divTable.minimalistBlackPopup .divTableRowPopup .divTableCellPopup  {
+    border: 1px solid #000000;
+    padding: 5px 6px;
+}
+
+.box-bgc  {
+    background-color: aliceblue;
+    text-align: center;
+}
+/* map popup 관측소 e */
+
 /* DivTable.com */
 .divTable{ display: table; }
 .divTableRow { display: table-row; }
+.divTableRowPopup { display: table-row; }
 .divTableHeading { display: table-header-group;}
 .divTableCell, .divTableHead { display: table-cell;}
+.divTableCellPopup { display: table-cell;}
 .divTableHeading { display: table-header-group;}
 .divTableFoot { display: table-footer-group;}
 .divTableBody { display: table-row-group;}
