--- a/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
@@ -6,22 +6,22 @@
     <section th:object="${observatory}">
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
-        <div class="divTable">
-            <div class="divTableRow">
-                <div class="divTableCell" th:text="#{코드}"></div>
-                <div class="divTableCell" th:text="*{obscd}"></div>
+        <div class="divTable minimalistBlackPopup mgn-10px">
+            <div class="divTableRowPopup">
+                <div class="divTableCellPopup box-bgc" th:text="#{코드}"></div>
+                <div class="divTableCellPopup" th:text="*{obscd}"></div>
             </div>
             <div class="divTableRow">
-                <div class="divTableCell" th:text="#{현재강수량}"></div>
-                <div class="divTableCell" th:text="*{rf}"></div>
+                <div class="divTableCellPopup box-bgc" th:text="#{현재강수량}"></div>
+                <div class="divTableCellPopup" th:text="*{rf}"></div>
             </div>
             <div class="divTableRow">
-                <div class="divTableCell" th:text="#{누적강수량}"></div>
-                <div class="divTableCell" th:text="*{rf}"></div>
+                <div class="divTableCellPopup box-bgc" th:text="#{누적강수량}"></div>
+                <div class="divTableCellPopup" th:text="*{rf}"></div>
             </div>
             <div class="divTableRow">
-                <div class="divTableCell" th:text="#{위치}"></div>
-                <div class="divTableCell" th:text="*{addr + ' ' + etcaddr}"></div>
+                <div class="divTableCellPopup box-bgc" th:text="#{위치}"></div>
+                <div class="divTableCellPopup" th:text="*{addr + ' ' + etcaddr}"></div>
             </div>
         </div>
     </section>
