--- a/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/wl.html
@@ -6,22 +6,23 @@
     <section th:object="${observatory}">
         <h2 class="text-center" th:text="*{obsnm}"></h2>
         <div class="h-line"></div>
-        <div class="divTable minimalistBlack mgn-10px">
-            <div class="divTableRow">
-                <div class="divTableCell" th:text="#{코드}"></div>
-                <div class="divTableCell" th:text="*{obscd}"></div>
+        <div></div>
+        <div class="divTable minimalistBlackPopup mgn-10px">
+            <div class="divTableRowPopup">
+                <div class="divTableCellPopup box-bgc" th:text="#{코드}"></div>
+                <div class="divTableCellPopup" th:text="*{obscd}"></div>
             </div>
-            <div class="divTableRow">
-                <div class="divTableCell" th:text="#{현재수위}"></div>
-                <div class="divTableCell" th:text="*{wl}"></div>
+            <div class="divTableRowPopup">
+                <div class="divTableCellPopup box-bgc" th:text="#{현재수위}"></div>
+                <div class="divTableCellPopup" th:text="*{wl}"></div>
             </div>
-            <div class="divTableRow">
-                <div class="divTableCell" th:text="#{수위변화}"></div>
-                <div class="divTableCell" th:text="*{wl}"></div>
+            <div class="divTableRowPopup">
+                <div class="divTableCellPopup box-bgc" th:text="#{수위변화}"></div>
+                <div class="divTableCellPopup" th:text="*{wl}"></div>
             </div>
-            <div class="divTableRow">
-                <div class="divTableCell" th:text="#{위치}"></div>
-                <div class="divTableCell" th:text="*{addr + ' ' + etcaddr}"></div>
+            <div class="divTableRowPopup">
+                <div class="divTableCellPopup box-bgc" th:text="#{위치}"></div>
+                <div class="divTableCellPopup" th:text="*{addr + ' ' + etcaddr}"></div>
             </div>
         </div>
     </section>
