--- a/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
@@ -11,15 +11,15 @@
                 <div class="divTableCellPopup box-bgc" th:text="#{코드}"></div>
                 <div class="divTableCellPopup" th:text="*{obscd}"></div>
             </div>
-            <div class="divTableRow">
+            <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{현재강수량}"></div>
                 <div class="divTableCellPopup" th:text="*{rf}"></div>
             </div>
-            <div class="divTableRow">
+            <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{누적강수량}"></div>
                 <div class="divTableCellPopup" th:text="*{rf}"></div>
             </div>
-            <div class="divTableRow">
+            <div class="divTableRowPopup">
                 <div class="divTableCellPopup box-bgc" th:text="#{위치}"></div>
                 <div class="divTableCellPopup" th:text="*{addr + ' ' + etcaddr}"></div>
             </div>
